Updated feature X with latest changes

--- a/.env
+++ b/.env
@@ -5,9 +5,10 @@ MONGODB_URI=mongodb+srv://wardrobe-user:wardrobe123@cluster0.l6izits.mongodb.net
 JWT_SECRET=your-super-secret-jwt-key-here
 
 # Cloudinary Configuration
-CLOUDINARY_CLOUD_NAME=your-cloud-name
-CLOUDINARY_API_KEY=your-api-key
-CLOUDINARY_API_SECRET=your-api-secret
+CLOUDINARY_CLOUD_NAME=dwu5as2pf
+CLOUDINARY_API_KEY=798728651568737
+CLOUDINARY_API_SECRET=pMgx87NPtNrcQT5MO-e8yq9Mp90
+CLOUDINARY_URL=cloudinary://798728651568737:pMgx87NPtNrcQT5MO-e8yq9Mp90@dwu5as2pf
 
 # OpenAI Configuration
 OPENAI_API_KEY=your-openai-api-key
