--- a/package.json
+++ b/package.json
@@ -11,8 +11,18 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.14",
     "@types/react-dom": "^19.1.9",
+    "@types/react-dropzone": "^4.2.2",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.12.2",
+    "framer-motion": "^12.23.22",
+    "lucide-react": "^0.544.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-normalize": "^13.0.1",
+    "postcss-preset-env": "^10.4.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
+    "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
