Update AI integration: configurable model, JSON output; add seed script; add root .gitignore; update env example

--- a/env.example
+++ b/env.example
@@ -11,6 +11,7 @@ CLOUDINARY_API_SECRET=your-api-secret
 
 # OpenAI Configuration
 OPENAI_API_KEY=your-openai-api-key
+OPENAI_MODEL=gpt-4o-mini
 
 # Server Configuration
 PORT=5000
