--- a/env.example
+++ b/env.example
@@ -16,3 +16,10 @@ OPENAI_MODEL=gpt-4o-mini
 # Server Configuration
 PORT=5000
 NODE_ENV=development
+
+# CORS (Frontend origin(s) allowed to call the API)
+# Comma-separated list. Example for production:
+# CORS_ORIGIN=https://your-frontend-domain.com
+# For local development (CRA default):
+# CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN=
